--- a/templates/search.tmpl
+++ b/templates/search.tmpl
@@ -1,46 +1,64 @@
 {{> mainlessheader.tmpl}}
             <div class="main wrapper clearfix report">
                 <h1>Search</h1>
-                <form class="searchform">
+                <form class="searchform" autocomplete="off">
                     Search: <input type="search">
                     <input type="submit">
                 </form>
                     <div class="row">
-                      <div class="column left">
-                         show
-                          <select id="showentries" onchange="doSearch()">
-                            <option value=100>100</option>
-                            <option value=500>500</option>
-                            <option value=-1>All</option>
-                          </select>
-                          entries
-                        <h4> Search on Keys </h4>
-                        <ul style="list-style-type:none;padding-left: 0">
-                          <li>
-                            <input name="searchkey" type="checkbox" onclick="doSearch()" id="name" checked/>
-                            <label for="name">Name</label>
-                          </li>
-                          <li>
-                            <input name="searchkey" type="checkbox" onclick="doSearch()" id="login" checked/>
-                            <label for="login">Login</label>
-                          </li>
-                          <li>
-                            <input name="searchkey" type="checkbox" onclick="doSearch()" id="company" checked/>
-                            <label for="company">Company</label>
-                          </li>
-                          <li>
-                            <input name="searchkey" type="checkbox" onclick="doSearch()" id="location" checked/>
-                            <label for="location">Location</label>
-                          </li>
-                          <li>
-                            <input name="searchkey" type="checkbox" onclick="doSearch()" id="email" checked/>
-                            <label for="email">Email</label>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="column right">
+                        <div class="column left">
+                           show
+                            <select id="showentries" onchange="doSearch()">
+                                <option value=100>100</option>
+                                <option value=500>500</option>
+                                <option value=-1>All</option>
+                            </select>
+                            entries
+                            <h4> Search on Keys </h4>
+                            <ul style="list-style-type:none;padding-left: 0">
+                                <li>
+                                    <input name="searchkey" type="checkbox" onclick="doSearch()" id="name" checked/>
+                                    <label for="name">Name</label>
+                                </li>
+                                <li>
+                                    <input name="searchkey" type="checkbox" onclick="doSearch()" id="login" checked/>
+                                    <label for="login">Login</label>
+                                </li>
+                                <li>
+                                    <input name="searchkey" type="checkbox" onclick="doSearch()" id="location" checked/>
+                                    <label for="location">Location</label>
+                                </li>
+                                <li>
+                                    <input name="searchkey" type="checkbox" onclick="doSearch()" id="org" checked/>
+                                    <label for="org">Organization</label>
+                                </li>
+                                <li>
+                                    <input name="searchkey" type="checkbox" onclick="doSearch()" id="company" checked/>
+                                    <label for="company">Company</label>
+                                </li>
+                                <li>
+                                    <input name="searchkey" type="checkbox" onclick="doSearch()" id="email" checked/>
+                                    <label for="email">Email</label>
+                                </li>
+                            </ul>
+                            <div id="togglecolumns" style="display:none;">
+                                <h4> Toggle Columns </h4>
+                                <ul style="list-style-type:none;padding-left: 0">
+                                    <li><input type="checkbox" autocomplete="off" checked disabled > Login</li>
+                                    <li><input type="checkbox" autocomplete="off" checked disabled> Type</li>
+                                    <li><input type="checkbox" autocomplete="off" checked disabled> Name</li>
+                                    <li><input type="checkbox" autocomplete="off" onclick='toggleSearchTableClass("hidden-location");' checked> Location</li>
+                                    <li><input type="checkbox" autocomplete="off" onclick='toggleSearchTableClass("hidden-org");' checked> Organization</li>
+                                    <li><input type="checkbox" autocomplete="off" onclick='toggleSearchTableClass("hidden-company");'> Company</li>
+                                    <li><input type="checkbox" autocomplete="off" onclick='toggleSearchTableClass("hidden-email");'> Email</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="column right">
                         <div id="resultscount"></div>
-                        <div id="resultstable"></div>
+                        <table id="searchresults" class="sortable hidden-company hidden-email">
+                            <thead></thead>
+                        </table>
                       </div>
                     </div>
 <style>
@@ -60,10 +78,10 @@ a {
     box-sizing: border-box;
 }
 .left {
-  width: 20%;
+    width: 20%;
 }
 .right {
-  width: 80%;
+    width: 80%;
 }
 @media screen and (max-width: 600px) {
     .column {
@@ -79,12 +97,22 @@ a {
     clear: both;
     box-sizing: border-box;
 }
+table.hidden-location td:nth-child(4),
+table.hidden-org td:nth-child(5),
+table.hidden-company td:nth-child(6),
+table.hidden-email td:nth-child(7),
+table.hidden-location th:nth-child(4),
+table.hidden-org th:nth-child(5),
+table.hidden-company th:nth-child(6),
+table.hidden-email th:nth-child(7) {
+    display:none;
+}
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
 <script>
 var searchdata = {{{searchdata}}};
 var searchbox = document.querySelector(".searchform input[type=search]");
-var searchkeys = ["name", "login", "company", "location", "email"]
+var searchkeys = ["name", "login", "location", "org", "company", "email"]
 var fuse = new Fuse(searchdata, {
     keys: searchkeys,
     threshold: 0.3
@@ -93,14 +121,10 @@ var waitTimer;
 function doSearch() {
     // bump the timer
     clearTimeout(waitTimer);
-    var entries = document.getElementById ("showentries");
+    var entries = document.getElementById("showentries");
     entries = entries.options[entries.selectedIndex].value
     waitTimer = setTimeout(function() {
-        // create the table here to avoid sortable parsing an incomplete table
-        var table = document.createElement("table");
-        table.setAttribute("id", "searchresults");
-        table.setAttribute("class", "sortable");
-        document.getElementById("resultstable").appendChild(table)
+        // config fuse, and determine how many results to show
         var sr = document.getElementById("searchresults");
         fuse.options.keys = checkSearchKey()
         sr.innerHTML = "";
@@ -114,7 +138,7 @@ function doSearch() {
         }
         var thead = document.createElement("thead");
         var tr = document.createElement("tr");
-        ["Login", "Type", "Name", "Company", "Location", "Email"].forEach(function(h) {
+        ["Login", "Type", "Name", "Location", "Organization", "Company", "Email"].forEach(function(h) {
             addToRow(tr, "th", document.createTextNode(h));
         })
         thead.appendChild(tr);
@@ -134,11 +158,14 @@ function doSearch() {
             var name = document.createTextNode(r.name || "");
             addToRow(tr, "td", name)
 
-            var company = document.createTextNode(r.company || "");
-            addToRow(tr, "td", company)
-
             var location = document.createTextNode(r.location || "");
             addToRow(tr, "td", location)
+
+            var org = document.createTextNode(r.org ? r.org.join(", "):"");
+            addToRow(tr, "td", org)
+
+            var company = document.createTextNode(r.company || "");
+            addToRow(tr, "td", company)
 
             var email = document.createTextNode(r.email || "");
             addToRow(tr, "td", email)
@@ -146,7 +173,9 @@ function doSearch() {
             tbody.appendChild(tr);
         })
         sr.appendChild(tbody);
+        // invoke sortable, and reveal toggle options
         sorttable.makeSortable(document.querySelector("#searchresults"))
+        document.getElementById("togglecolumns").style = ""
     }, entries);
 }
 function addToRow(row, type, inner) {
@@ -159,11 +188,14 @@ function checkSearchKey() {
     var checkboxes = document.getElementsByName('searchkey');
     var selected = [];
       for (var i=0; i<checkboxes.length; i++) {
-         if (checkboxes[i].checked) {
-            selected.push(checkboxes[i].id);
-         }
+            if (checkboxes[i].checked) {
+               selected.push(checkboxes[i].id);
+            }
       }
     return selected
+}
+function toggleSearchTableClass(className) {
+  document.querySelector("table#searchresults").classList.toggle(className)
 }
 
 document.querySelector(".searchform").onsubmit = function(e) {
