Stop sliders for graphs with no data from showing a white background in Firefox

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -578,6 +578,8 @@ input[type=range].adjustable-graph-slider {
   -webkit-appearance: none;
   margin: 18px 0;
   width: 100%;
+  background: transparent;
+  box-shadow: none;
 }
 input[type=range].adjustable-graph-slider:focus {
   outline: none;
