--- a/templates/report.tmpl
+++ b/templates/report.tmpl
@@ -8,7 +8,10 @@ $report = <<<EOF
                 <h1>{{title}}</h1>
                 {{{html}}}
 EOF;
-$isok = generic_verify($_COOKIE["MeasureAuth"]);
+$isok = FALSE;
+if (isset($_COOKIE["MeasureAuth"])) {
+    $isok = generic_verify($_COOKIE["MeasureAuth"]);
+}
 
 if ($isok) {
     echo $report;
