--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -4,7 +4,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>Measure 2017-2018</h3>
+                <h3>Measure</h3>
                 <small>Page generated {{gen}}</small>
             </footer>
         </div>
